--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
         <title>
             Resume
         </title>
+        <!DOCTYPE html>
+        <html lang="en">
+            <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width,initial-scale=1.0">
+                <meta name="description"  content="this is my resume"
+                <title>Document</title>
+            </head>
         </head>
         <body>
             <div class="personal-info">
                 <h1>
-                    Your Name
+                    YAMMANURU HARINI
                 </h1>
                 <p>
                     Address:Green Fields Vijayawada,KL University
@@ -20,7 +28,7 @@
                     Email:yammanuruharini2004@gmail.com
                 </p>
                 <p>
-                     Linkedin:yammanuruharini
+                     Linkedin:yammanuru harini
                 </p>
                 <p>
                     Github:yammanuruharini
